# egui_logger

./: Cargo.toml
examples/: benchmark.rs  hello.rs  multi_log.rs  puffin.rs
